tests/snapshots/preview__preview_image_navigation@002.snap
---
source: tests/preview.rs
description: "input: items [\"examples/missing.png\", \"examples/Lenna.png\"]\noptions: --preview {} --image halfblocks\nafter:\n  @key Up"
---
"                                        │                                512x512"
"                                        │▀▄▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄▀▀▄▄▄▀▀▀▄▄▀▄▄▀▀"
"                                        │▄▀▀▄▀▀▀▄▄▀▀▀▀▀▀▄▄▄▄▄▀▄▀▀▀▀▀▀▀▀▀▀▀▄▄▀▀▀▀"
"                                        │▀▀▀▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄▄▄▄▄▀▀▄▄▀▀▀▀▄▀▀▀▀▀▄▄"
"                                        │▀▄▀▀▄▄▀▀▀▄▀▀▄▄▄▄▀▀▄▄▀▀▄▄▄▀▄▄▀▀▀▀▀▀▄▄▄▄▄"
"                                        │▄▄▀▄▀▀▄▀▀▄▀▄▄▀▀▄▄▀▀▀▀▀▀▀▄▄▄▀▄▄▄▄▄▀▀▄▄▄▀"
"                                        │▀▄▄▄▄▄▀▀▄▄▄▀▀▄▄▀▀▀▀▀▀▀▀▀▀▀▄▄▄▀▀▀▀▄▄▄▄▀▄"
"                                        │▄▄▄▄▄▀▀▀▀▄▄▄▀▀▀▀▀▀▀▀▀▀▀▄▄▄▄▀▀▀▀▀▄▄▄▄▀▀▀"
"                                        │▄▀▀▄▄▀▀▀▄▀▄▄▀▀▀▀▀▀▀▄▄▄▄▀▀▀▀▀▀▀▀▄▄▄▄▄▄▄▀"
"                                        │▀▀▀▄▄▄▄▄▄▀▀▀▀▀▀▀▀▄▄▄▄▀▀▄▄▄▄▀▄▄▀▄▄▄▀▀▀▀▀"
"                                        │▀▀▀▄▄▀▀▀▄▄▀▀▄▄▀▀▄▄▄▀▀▀▀▀▀▀▀▀▄▀▄▄▄▀▀▄▄▄▀"
"                                        │▀▀▀▄▄▄▄▄▀▀▄▄▄▄▀▄▄▀▄▄▄▄▄▄▄▄▄▄▄▀▄▄▀▀▀▀▄▄▄"
"                                        │▀▀▀▀▀▄▀▀▄▄▀▀▄▄▄▀▀▀▀▀▀▀▀▀▄▀▀▀▄▄▄▄▀▀▀▄▄▄▄"
"                                        │▀▄▄▀▄▀▀▀▀▀▄▄▄▄▀▀▄▄▀▀▀▄▄▄▀▀▀▄▀▄▄▀▀▀▄▄▄▄▄"
"                                        │▀▄▀▄▄▄▀▀▄▄▄▄▀▀▀▄▀▀▀▀▄▀▀▀▀▀▄▄▄▄▄▄▄▀▄▄▄▄▀"
"                                        │▄▀▀▀▄▄▀▄▀▀▄▀▀▄▄▀▀▀▀▀▀▄▄▄▄▄▄▄▄▀▀▀▀▀▄▀▀▀▀"
"                                        │▄▄▀▄▄▀▀▀▀▀▀▄▄▄▄▄▄▄▀▄▄▄▄▀▄▄▄▀▄▄▄▄▄▄▄▀▀▄▄"
"                                        │▀▄▀ ▀▀▀▄▀▀▀▀▀▄▄▄▄▄▄▄▀▀▀▀▀▀▄▄▄▀▀▀▄▄▀▀▄▀▀"
"                                        │▀▄▄▀▀▄▀▀▄▀▄▄▀▀▀▄▄▀▄▄▄▀▀▀▀▀▀▄▀▀▀▀▄▀▀▀▀▀▀"
"                                        │▀▀▄▄▀▀▄▄▄▄▄▀▀ ▄▄▄▄▀▀▄▄▄▀▀▀▀▀▄▄▄▄▀▀▄▀▄▀▀"
"> examples/Lenna.png                    │▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀"
"  examples/missing.png                  │                                       "
"  2/2                                1/0│                                       "
">                                       │                                       "
cursor: (24, 3)
