tests/snapshots/preview__preview_image_window_down@001.snap
---
source: tests/preview.rs
description: "input: items [\"examples/Lenna.png\"]\noptions: --preview {} --image halfblocks --preview-window down:40%"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> examples/Lenna.png                                                            "
"  1/1                                                                        0/0"
">                                                                               "
"─────────────────────────────────────────────────────────────────────────512x512"
"▄▀▀▀▀▀▀▄▄▄▀▀▀▀▀▄▀▀                                                              "
"▀▀▀▀▀▀▄▀▄▄▄▄▀▀▀▀▄▄                                                              "
"▄▄▄▄▄▄▄▀▀▀▀▄▄▄▀▄▄▄                                                              "
"▀▀▀▀▀▀▀▀▀▄▄▀▀▀▀▄▄▄                                                              "
"▀▀▄▄▀▀▀▄▄▀▀▀▀▄▄▀▀▄                                                              "
"▀▄▀▀▄▄▄▀▀▀▀▀▀▄▄▄▄▄                                                              "
"▀▀▀▀▄▀▀▀▀▄▄▄▄▀▀▀▀▀                                                              "
"▄▄▀▀▀▀▄▄▄▀▀▄▄▄▄▄▀▄                                                              "
"▄▄▀▄▄▀▄▄▄▄▀▀▀▄▀▀▀▀                                                              "
cursor: (14, 3)
