tests/snapshots/preview__preview_no_pty_linux.snap
---
source: tests/preview.rs
expression: buf + & cursor_pos
---
"                                        │NO                                     "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> x                                     │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
