tests/snapshots/preview__preview_no_pty_linux@001.snap
---
source: tests/preview.rs
description: "input: items [\"x\"]\noptions: --preview tty -s && echo YES || echo NO --preview-window wrap"
---
"                                        │NO                                     "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> x                                     │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
